[package]
name = "talaria"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Nathanial Lattimer <d0nut@resync.gg>"]
description = "A high performance, cyclic message passing library."
repository = "https://github.com/d0nutptr/talaria"
keywords = ["channel", "message", "mpmc" ,"mpsc", "ring"]

[dependencies]
crossbeam-utils = "0.8"
thiserror = "1"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[target.'cfg(shuttle)'.dependencies]
shuttle = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
loom = "0.7"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }
crossbeam-channel = "0.5"
flume = "0.11.0"
disrustor = "0.4.0"

[profile.release]
debug = true

[[bench]]
name = "exclusive"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "crossbeam"
harness = false

[[bench]]
name = "flume"
harness = false

[[bench]]
name = "disrustor"
harness = false